# api-youtube

./: .gitignore  alembic.ini  entidades_incompletas.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 500fc28376d2_adding_comment_language.py  7a68ce06836e_.py  eed0a8914709_creating_table_country.py
models/: store.py  users.py  videos.py
persistence/: db_connection.py  entities.py
routers/: auth.py  video.py  videos.py
util/: logger.py
